# ai-scheduling-agent

./: .env.example  .gitignore  README.md  find_uris.py  generate_data.py  pyproject.toml  test_api.py  test_calendely_api.py  test_data.py  test_ollama.py  ui.py
app/: agent.py  main.py  tools.py  utils.py
data/: bookings.csv  doctor_schedules.xlsx  dr schedules.xlsx  patients.csv  ~$dr schedules.xlsx
